--- a/.gitignore
+++ b/.gitignore
@@ -23,3 +23,9 @@
 hs_err_pid*
 /ProyectoAlex/nbproject/private/
 /AlexProjects/nbproject/private/
+/Menu/menu/nbproject/private/
+/Menu/EjercicioPHPenJS/nbproject/private/
+/Menu/Tema8/nbproject/private/
+/Menu/Tema8/build/
+/Menu/EjercicioDictado/nbproject/private/
+/Menu/Ejercicio6Pag173/nbproject/private/
