--- a/ProjectAlex/nbproject/private/private.properties
+++ b/ProjectAlex/nbproject/private/private.properties
@@ -1,2 +1,3 @@
 compile.on.save=true
-user.properties.file=C:\\Users\\Alex\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
+project.libreria=D:\\DAM\\Programacion\\Ejercicios\\libreriaClase
+user.properties.file=C:\\Users\\franp\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
