--- a/Opcion2/nbproject/private/private.properties
+++ b/Opcion2/nbproject/private/private.properties
@@ -1,2 +1,4 @@
 compile.on.save=true
-user.properties.file=C:\\Users\\Admin\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
+project.libreria=D:\\DAM\\Programacion\\Ejercicios\\libreriaClase
+project.libreria-1=D:\\DAM\\Programacion\\Ejercicios\\libreriaClase
+user.properties.file=C:\\Users\\franp\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
