--- a/Opcion2/nbproject/project.properties
+++ b/Opcion2/nbproject/project.properties
@@ -30,7 +30,8 @@ excludes=
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${reference.libreria.jar}
+    ${reference.libreria.jar}:\
+    ${reference.libreria-1.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -61,6 +62,7 @@ meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
 platform.active=default_platform
 project.libreria=../Libreria
+reference.libreria-1.jar=${project.libreria-1}/dist/libreria.jar
 reference.libreria.jar=${project.libreria}/dist/libreria.jar
 run.classpath=\
     ${javac.classpath}:\
