--- a/.gitignore
+++ b/.gitignore
@@ -29,3 +29,4 @@ hs_err_pid*
 /Menu/Tema8/build/
 /Menu/EjercicioDictado/nbproject/private/
 /Menu/Ejercicio6Pag173/nbproject/private/
+/ProjectAlex/build/
